Fixed misalignment issue with spinner.

--- a/src/stylesheets/elements/_spinner.scss
+++ b/src/stylesheets/elements/_spinner.scss
@@ -18,7 +18,6 @@ $spinnerXLSize: 6rem;
 }
 
 .spinner-group {
-	position: relative;
 	padding-top: 2rem;
 
 	& > .spinner {
